--- a/src/Amenophis/Bundle/WHMCSBundle/Resources/views/Security/index.html.twig
+++ b/src/Amenophis/Bundle/WHMCSBundle/Resources/views/Security/index.html.twig
@@ -5,7 +5,7 @@
     <div>{{ error.message }}</div>
 {% endif %}
 
-<form action="{{ path('fp_whmcs_security_check') }}" method="post">
+<form action="{{ path('amenophis_whmcs_security_check') }}" method="post">
     <label for="username">Username:</label>
     <input type="text" id="username" name="_username" value="{{ last_username }}" />
 
